name:
  edges
version:
  0.3.0.2
category:
  Graphs
synopsis:
  Tools for efficient immutable graphs
description:
  A set of tools for constructing immutable graphs which are both memory and performance-efficient.
homepage:
  https://github.com/metrix-ai/edges
bug-reports:
  https://github.com/metrix-ai/edges/issues
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Metrix Ninjas <ninjas@metrix.ai>
copyright:
  (c) 2018, Metrix.AI
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10

source-repository head
  type:
    git
  location:
    git://github.com/metrix-ai/edges.git

library
  hs-source-dirs:
    library
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples, OverloadedLists
  default-language:
    Haskell2010
  exposed-modules:
    Edges.Count
    Edges.Edges
    Edges.NodeCounts
  other-modules:
    Edges.Prelude
    Edges.Internal.Types
  build-depends:
    base >=4.7 && <5,
    cereal >=0.5.5 && <0.6,
    contravariant >=1.4 && <2,
    deferred-folds >=0.6 && <0.7,
    foldl >=1 && <2,
    pointed >=5 && <6,
    potoki >=2 && <2.1,
    potoki-cereal >=0.2.1.1 && <0.3,
    primitive >=0.6.4 && <0.7,
    primitive-extras >=0.1.7 && <0.2,
    profunctors >=5 && <6,
    semigroupoids >=5.2 && <6,
    vector >=0.12 && <0.13
